[package]
name = "gh"
version = "0.1.0"
authors = ["Petteri Ponkamo <petteri.ponkamo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CLI Github launcher"
readme = "README.md"
homepage = "https://github.com/BonbonGamo/gh-open"
repository = "https://github.com/BonbonGamo/gh-open"
keywords = ["cli", "demo"]
categories = ["command-line-utilities"]


[dependencies]